:bug: WP Core updated the way it handled text overflow so it was breaking all the headers. This reset that and fixed it.

--- a/assets/src/sass/utilities/_typography.scss
+++ b/assets/src/sass/utilities/_typography.scss
@@ -54,8 +54,9 @@ h3 {
 }
 
 .large-title {
-  font-size: 6em;
+  font-size: 5em;
   line-height: 1.2;
+  overflow-wrap: normal;
 }
 
 @media screen and (min-width: 64em) {
